# updaid

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/lib/: __init__.py  email_helpers.py  helpers.py  iac_retrievers.py  release_retrievers.py
tests/: test_helpers.py  test_iac_retrievers.py  test_release_retrievers.py
